Graphs: Fix background behind boxes

--- a/github-dark.css
+++ b/github-dark.css
@@ -220,7 +220,7 @@
   .timeline-commits .commit-meta .octicon, .file .meta-divider, .avatar-stack.multiple-avatars:before,
   #feedHandler, .discussion-sidebar-item .thread-subscription-status, .boxed-group.application-show-group .logo-upload,
   .diagram-icon-small, .commits-listing .commit-group-title .octicon-git-commit, #readme .highlight,
-  .ace-github, .add-member-team-list.table-list, .theme-picker, .avatar-stack .avatar {
+  .ace-github, .add-member-team-list.table-list, .theme-picker, .avatar-stack .avatar, .boxed-group {
     background: transparent !important;
   }
   /* Redeem Page */
@@ -462,7 +462,7 @@
   .setup-form .setup-plans, .prose-diff > .markdown-body, .revision .gu, .tree-browser td, .tree-browser .alt td,
   .branches .branch-summary, .branches .no-results-message, .simple-box-footer, .team-grid .team, .commit-group,
   .blankslate, .content table tr, #search-results, table.files, .mergeable, .org-module, .org-add-footer, .fullscreen-overlay,
-  .commit-tease, .branch-infobar, .table-list-header, table.capped-list tr:nth-child(2n), .boxed-group,
+  .commit-tease, .branch-infobar, .table-list-header, table.capped-list tr:nth-child(2n),
   #gollum-editor-help-wrapper, .integrations-quality, .showcase-featured .mo-info .featured-grid-outer, .collection-card {
     background: #181818 !important;
   }
